--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,29 @@
-<nav class="navbar fixed-bottom navbar-light bg-light">
-{%- if site.show-style-guide %}
-    <a href="{{ site.baseurl }}{% link style-guide/index.md %}" class="btn">Style Guide</a>
-{%- endif %}
+<nav class="navbarfooter fixed-bottom navbar-light bg-light">
+    {%- if site.show-style-guide %}
+
+    <div class="container">
+        <div class="wrapper">
+            <div class="row">
+                    <div class="col-1">
+                        <p> </p>
+                        </div>
+                <div class="col-4 kleine_tekst">
+                    <p>Eva Vanden Broeck © 2018 Herexamen                      
+                    </p>
+                </div>
+                <div class="col-2 kleine_tekst">
+                        <p>hello@umbrellady.be
+                                <br>032 471 04 01 27
+                    </div>
+                <div class="col-4 kleine_tekst">
+                    <a href="disclaimer.html">
+                        <p align="right">Disclaimer</p>
+                    </a>
+                
+                </div>
+            </div>
+        </div>
+    </div>
+
+    {%- endif %}
 </nav>
