--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,5 +1,421 @@
 ---
 ---
+
 @charset "UTF-8";
 
 @import "main";
+
+body{
+    font-family: Roboto, sans-serif;
+    font-size: 12px;
+    line-height: 160%;
+    background-color: #ffffff;
+    color: #000000;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin-bottom: 0; 
+    font-size: 12px;
+    margin-bottom: 10px;
+    margin-top: 25px;
+    text-align: center;
+    color: #3A68A8;
+    font-weight: bold;
+}
+
+H2{
+    color:rgb(234,182,24);
+}
+
+h3{
+    color: #3A68A8;
+    text-align: left;
+    margin-bottom: 15px;
+    margin-top: 30px;
+}
+.nieuw{
+    font-size: 50px;
+}
+.sterretje{
+    color: #E15200;
+}
+
+.breedte{
+    width:100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 5px;
+}
+
+.vraag{
+    color:#3A68A8s;
+    
+}
+.carousel-caption {
+    position: absolute;
+    right: 9%;
+    bottom: 0;
+    left: 0%;
+    z-index: 10;
+    padding-top: 0;
+    padding-bottom: 40px;
+}
+
+p {
+    margin-bottom: 0; 
+}
+
+.kleine_tekst,
+.verplicht{
+    font-size: 12px;
+    line-height: 120%;
+}
+
+.verplicht{
+    color: #000000;
+}
+
+
+article{
+    margin-bottom: 25px;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.article_2 {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.logo{
+    width: 100%;
+    height: 100%;
+}
+
+.kader{
+    background-color: white;
+    border: 10px solid #000000;
+    margin-top: 5px;
+}
+
+.navbar{
+    padding: 0;
+}
+
+.bg-light{
+    background-color: transparent !important;
+}
+
+.navbarfooter{
+    padding: 17px;
+    margin-top: 40px;
+    border: none;
+    background-color:#3A68A8!important;
+    color:#ffffff;
+}
+
+a{
+    color:#ffff;
+}
+
+a:hover{
+    color: rgb(234,182,24);
+    text-decoration: none;
+}  
+
+
+.fixed-bottom {
+    position: relative;
+}
+
+.ervaring-foto{
+    width: 100%;
+    padding-top: 15px;
+}
+
+
+tr{
+    background-color: #000000;
+    color: white;
+}
+
+
+.navigatie{
+    background-color:#3A68A8;
+    margin-bottom: 15px;
+}
+
+.nav-item{
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+
+.navbar-light .navbar-nav .active > .nav-link,{
+    color:#3A68A8;
+    text-decoration: none;
+}
+
+.navbar-light .navbar-nav .nav-link{
+    color:#3A68A8;
+}
+
+.navbar-light .navbar-nav .nav-link:hover{
+    color:#ffffff;
+}
+
+.navbar-light .navbar-nav .nav-link:active{
+    color: rgb(234,182,24);
+
+}
+
+.btn-secondary{
+    width: 30px;
+    border-radius: 0%;
+    font-size: 12px;
+}
+
+.btn-primary {
+    background-color:rgb(228,179,208);
+    border-color: transparent;
+    border-radius: 0%;
+    margin-top: 10px;
+    font-size:12px;
+}
+.btn-primary:hover {
+    background-color: rgb(234,182,24);
+    border-color: transparent; 
+}
+.btn-primary:focus, .btn-primary.focus {
+    box-shadow: none; 
+}
+.btn-primary.disabled, .btn-primary:disabled {
+    background-color: #E15200;
+    border-color: transparent; 
+}
+.btn-primary:not([disabled]):not(.disabled):active, .btn-primary:not([disabled]):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
+    background-color: #3A68A8;
+    border-color: transparent;
+    box-shadow: none; 
+}
+
+.links{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    min-height: 320px;
+    padding: 30px;
+    background-color: #1b1b1b;
+    background-image: linear-gradient(to bottom, #222, #111);
+    background-repeat: repeat-x;
+    border-color: #252525;
+    color: #b2bbbd;
+}
+
+.social-buttons{
+    position: fixed;
+    z-index: 999999;
+    top: 170px;
+    left: 0px;
+}
+
+ul{
+    list-style: none;
+    padding-left: 10px;
+}
+
+.pijltje::before { 
+    color: rgb(234,182,24);
+    padding-right: 10px;
+}
+
+.social-buttons-2{
+    display: none;
+}
+
+.iconen{
+    left: 0;
+    position: absolute;
+    width: 33px;
+    height: 33px;
+    display: inline-block;
+    background-color:rgb(234,182,24);
+    padding: 5px;
+}
+
+.img-footer{
+    padding-left: 0;
+}
+
+.col-form-label {
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+.custom-radio .custom-control-input:checked ~ .custom-control-indicator {
+    background-color: rgb(234,182,24);
+    
+}
+
+.custom-control-indicator {
+    background-color: #3A68A8;
+}
+
+.btn-secondary {
+    color: #fff;
+    background-color: #3A68A8;
+    border-color: #3A68A8;
+}
+
+.form-control {
+    color: white;
+    background-color: #3A68A8;
+    border: none;
+    border-radius: 0;
+    font-size: 12px;
+}
+.form-control:focus {
+    color:#000000;
+    background-color: #ffffff;
+    box-shadow:#3A68A8; 
+}
+.form-control::placeholder {
+    color:#ffffff;
+}
+
+.custom-control-input {
+    position: absolute;
+    z-index: -1;
+    opacity: 0; 
+}
+.custom-control-input:focus ~ .custom-control-indicator {
+        box-shadow: none; 
+}
+.custom-control-input:active ~ .custom-control-indicator {
+        background-color: rgb(127,119,112); 
+}
+
+
+
+@media only screen and (min-width: 576px) {
+    body{
+        font-size: 17px;
+        line-height: 140%;
+    }
+    h1, h2, h3, h4, h5, h6 {
+        font-size: 17px;
+        margin-bottom: 50px;
+        margin-top: 50px;
+    }
+    article{
+        margin-bottom: 50px;
+        margin-left: 65px;
+        margin-right: 65px;
+    }
+    h3{
+        margin-bottom: 15px;
+        margin-top: 30px;
+    }
+    .kader{
+        border: 10px solid rgb(228,179,208);
+        margin-top: 40px;
+    }
+    .btn-secondary{
+        width: 40px;
+        font-size: 17px;
+    }
+    .btn-primary {
+        margin-top: 40px;
+        font-size:17px;
+    }
+    .col-form-label {
+        padding-bottom: 30px;
+    }
+    .form-control {
+        font-size: 17px;
+    }
+    .footer_tekst,
+    .verplicht{
+    font-size: 8px;
+    line-height: 140%;
+    }
+
+ 
+ @media only screen and (min-width: 768px) {
+    .btn-secondary{
+        width: 60px;
+    }
+    .navbar{
+        padding: 5px;
+        margin-top: 40px;
+        margin-bottom: 40px;
+        border:none;
+        background-color:rgb(127,119,112);
+    }
+    .social-buttons{
+        display: none;
+    }
+    .social-buttons-2{
+        position: fixed;
+        z-index: 999999;
+        top: 85px;
+        left: 0px;
+        display:flex;
+    }
+    .iconen{
+        width: 60px;
+        height: 60px;
+        padding: 15px;
+    }
+    .logo{
+        height: 150px;
+        margin-top: 40px;
+        margin-bottom: 40px;
+    }
+    .btn-secondary-2{
+        width: 53px;
+        font-size: 17px;
+    }
+
+ }
+ 
+ @media only screen and (min-width: 992px) {
+    .btn-secondary{
+        width: 90px;
+    }
+    .btn-secondary-2{
+        width: 35px;
+    }
+    .navbar{
+        padding: 5px;
+        margin-top: 40px;
+        margin-bottom: 40px;
+        border-bottom: 3px solid rgb(234,182,24);
+    }
+
+    .navigatie{
+        background-color:rgb(228,179,208);
+    }
+
+    .navbar-light .navbar-nav .active > .nav-link,{
+        color: #ffffff;
+        text-decoration: none;
+    }
+
+    .navbar-light .navbar-nav .active > .nav-link:hover{
+        color:#3A68A8;
+    }
+
+    .navbar-light .navbar-nav .nav-link:active{
+        color: rgb(234,182,24);
+    }
+
+    @media only screen and (min-width: 1200px){
+    .btn-secondary{
+            width: 110px;
+        }
+    .btn-secondary-2{
+            width: 38px;}}}}
+
+    
