--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,13 +11,16 @@
                     <p>Eva Vanden Broeck © 2018 Herexamen                      
                     </p>
                 </div>
-                <div class="col-2 kleine_tekst">
+                <div class="col-4 kleine_tekst">
                         <p>hello@umbrellady.be
                                 <br>032 471 04 01 27
+                            
                     </div>
-                <div class="col-4 kleine_tekst">
+                <div class="col-2 kleine_tekst">
                     <a href="disclaimer.html">
-                        <p align="right">Disclaimer</p>
+                        <p align="right">Disclaimer
+                            
+                        </p>
                     </a>
                 
                 </div>
